# hrodmn.dev

./: .gitignore  .pre-commit-config.yaml  _publish.yml  _quarto.yml  about.qmd  index.qmd  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish.yml  render.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: INDEX
_extensions/nrennie/PrettyPDF/: PrettyPDF.tex
_freeze/posts/R_code/execute-results/: html.json
_freeze/posts/code/execute-results/: html.json
_freeze/posts/python_code/execute-results/: html.json
_site/: about.html  index.html  search.json
posts/: R_code.qmd  _metadata.yml  code.qmd  index.qmd  python_code.qmd
posts/hls/: bands.csv  index.qmd  qa.csv
posts/nasa-s3/: index.qmd  nasa_s3_test.py
posts/postgrestgis/: docker-compose.yml  generate_points.py  index.qmd  setup_db.sql
posts/stackstac/: index.ipynb  index.qmd
