[project]
name = "hrodmn.dev"
version = "0.1.0"
description = "quarto publication with posts about geospatial software"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "folium>=0.17.0",
    "geojson-pydantic>=1.1.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipython>=8.28.0",
    "ipywidgets>=8.1.5",
    "jupyter-cache>=1.0.0",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.9.2",
    "odc-stac>=0.3.10",
    "pandas>=2.2.3",
    "planetary-computer>=1.0.0",
    "pre-commit>=4.0.0",
    "pyproj>=3.7.0",
    "pystac>=1.11.0",
    "pystac-client>=0.8.3",
    "rasterio>=1.4.1",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "stackstac>=0.5.1",
    "xarray>=2024.9.0",
]
